src/sass/modules/_project-section.scss
section.projects {
    display: block;
    float: right;
    @include breakpoint(xs) {
        margin-top: 1.5rem;
        width: 100%;
    }
    @include breakpoint(sm) {
        width: 50%;
    }
    @include breakpoint(md) {
        margin-top: 0;
        width: 66%;
    }
    @include breakpoint(lg) {
        width: 75%;
    }
    @include breakpoint(xl) {
        width: 80%;
    }
    &::after {
        content: '';
        display: table;
        clear: both;
        float: none;
    }
}

section.projects {
    padding-top: 0.5em;
}
section.projects ul {
    display: flex;
    flex-flow: row wrap;
    margin: 0;
}
@include breakpoint(md) {
    section.projects ul li {
        flex: 1 0 50%;
        max-width: 50%;
    }
}
@include breakpoint(lg) {
    section.projects ul li {
        flex: 1 0 33%;
        max-width: 33%;
    }
}
@include breakpoint(lg) {
    section.projects ul li {
        flex: 1 0 25%;
        max-width: 25%;
    }
}
section.projects ul li {
    padding: 0.5em 0;
}
section.projects ul li a {
    display: block;
    padding: 4px;
    max-width: 90%;
    text-transform: capitalize;
    background-color: $color_body;
    box-shadow: $shadows_default;
    transition: $transition;
    h3,
    small {
        margin: 0.25em;
    }
    &:hover {
        //background-color: $color_hover;
        box-shadow: $shadows_hover;
    }
    &:hover h3 {
        color: #666;
        text-decoration: underline;
    }
}
div#orderButtons {
    display: block;
    padding: 1em 0 0 0;
    margin: 0 3em 0 0;
    height: 4em;
    max-height: 4em;
    line-height: 0;
    text-align: center;
    overflow-y: hidden;
}
div#orderButtons button {
    display: inline-flex;
    position: relative;
    padding: 0;
    margin: 0 0.25em;
    transform: translate(0, 4em);
    border: 0;
    background: none;
    cursor: pointer;
    transition: $transition;

    span {
        display: block;
        padding: 1em 1em 0 0;
        line-height: 1em;
        transform: translate(0, 4em);
        box-shadow: $shadows_default;
        transition: $transition;
        z-index: -1;
    }
    svg {
        padding: 0.5em;
        width: 2em;
        height: 2em;
        background-color: $color_body;
    }
    &:hover {
        box-shadow: $shadows_hover;
    }
    &.active span {
        text-decoration: underline;
    }
    &.active span,
    &:hover span {
        transform: translate(0, 0);
    }
}
div#orderButtons button svg,
div#orderButtons button span {
    position: static;
    z-index: 2;
}

section.projects:hover,
section.projects:focus {
    div#orderButtons button {
        transform: translate(0, 0);
    }
}

